[What] fruit project upload [How] Null [why] Null Signed-off-by: jiayuhao <jiayuhaowork@163.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,8 +52,8 @@
     <div class="panel panel-default">
         <div class="panel-heading">图像识别</div>
         <div class="panel-body">
-            <p><a href="/tile/infer_tile.html"  target="_blank">瓷砖残次检测</a></p>
-            <p><a href="/static/infer_fruit.html"  target="_blank">水果检测</a> </p>
+            <p><a href="/tile_infer"  target="_blank">瓷砖残次检测</a></p>
+            <p><a href="/fruit_infer"  target="_blank">水果检测</a> </p>
             <p><a href="http://codec.wang/opencv-python/"  target="_blank">opencv-python中文教程 http://codec.wang/opencv-python/</a></p>
             <p><a href="https://github.com/ex2tron/OpenCV-Python-Tutorial"  target="_blank">opencv-python中文教程 github开源网址 https://github.com/ex2tron/OpenCV-Python-Tutorial</a></p>
 
