[what]demo upload [how] null [why] null
Signed-off-by: jiayuhao <jiayuhaowork@163.com>

--- a/fruit_infer/templates/fruit_infer/infer_index.html
+++ b/fruit_infer/templates/fruit_infer/infer_index.html
@@ -107,7 +107,7 @@
 
 			$("#submitBtn").click(function(){
 				
-				var url = "http://127.0.0.1:8000/fruit_infer/do_infer.html";
+				var url = "/fruit_infer/do_infer.html";
 
 				var data = {
 
