--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Tshared-首页</title>
+    <title>个人demo-首页</title>
 
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -30,8 +30,8 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="http://127.0.0.1:8000/index">首页<span class="sr-only">(current)</span></a></li>
-				<li><a href="assets.html">资源库</a></li>
-				<li><a href="links.html">共享链接</a></li>
+<!--				<li><a href="assets.html">资源库</a></li>-->
+<!--				<li><a href="links.html">共享链接</a></li>-->
 			</ul>
 		</div>
     </div>
@@ -39,38 +39,20 @@
 
 
 <div class="container-fluid">
-<!--    <div class="panel panel-default">-->
-<!--        <div class="panel-heading">pip安装源</div>-->
-<!--        <div class="panel-body">-->
-<!--            <p>阿里云 http://mirrors.aliyun.com/pypi/simple/</p>-->
-<!--            <p>中国科技大学 https://pypi.mirrors.ustc.edu.cn/simple/</p>-->
-<!--            <p>豆瓣(douban) http://pypi.douban.com/simple/</p>-->
-<!--            <p>清华大学 https://pypi.tuna.tsinghua.edu.cn/simple/</p>-->
-<!--            <p>中国科学技术大学 http://pypi.mirrors.ustc.edu.cn/simple/</p>-->
-<!--        </div>-->
-<!--    </div>-->
     <div class="panel panel-default">
         <div class="panel-heading">图像识别</div>
         <div class="panel-body">
-            <p><a href="/tile_infer"  target="_blank">瓷砖残次检测</a></p>
-            <p><a href="/fruit_infer"  target="_blank">水果检测</a> </p>
-            <p><a href="http://codec.wang/opencv-python/"  target="_blank">opencv-python中文教程 http://codec.wang/opencv-python/</a></p>
-            <p><a href="https://github.com/ex2tron/OpenCV-Python-Tutorial"  target="_blank">opencv-python中文教程 github开源网址 https://github.com/ex2tron/OpenCV-Python-Tutorial</a></p>
-
+            <p><a href="/fruit_infer"  target="_blank">水果分类</a> </p>
+			<p><a href="https://aistudio.baidu.com/aistudio/projectdetail/1260526?shared=1"  target="_blank">VGG16水果分类模型</a></p>
+			<p><a href="https://aistudio.baidu.com/aistudio/projectdetail/1196838?shared=1"  target="_blank">Paddle_hub人脸检测</a></p>
+			<p><a href="https://aistudio.baidu.com/aistudio/projectdetail/1194928?shared=1"  target="_blank">Paddle_hub ocr中文识别</a></p>
+			<p><a href="https://aistudio.baidu.com/aistudio/projectdetail/1262236?shared=1"  target="_blank">Yolo3 螺丝螺母分类</a></p>
+			<p><a href="https://aistudio.baidu.com/aistudio/projectdetail/1288066?shared=1"  target="_blank">opencv瓶盖异常检测</a></p>
+			<p><a href="#"  target="_blank">web自动化办公系统</a></p>
         </div>
     </div>
 
 
-<!--    <div class="panel panel-default">-->
-<!--        <div class="panel-heading">机器学习</div>-->
-<!--        <div class="panel-body">-->
-<!--            <p><a href="https://www.kaggle.com/datasets"  target="_blank">Kaggle数据集 https://www.kaggle.com/datasets</a></p>-->
-<!--            <p><a href="https://docs.opencv.org/3.4/d6/d00/tutorial_py_root.html"  target="_blank">opencv-python官方文档 https://docs.opencv.org/3.4/d6/d00/tutorial_py_root.html</a> </p>-->
-<!--            <p><a href="http://codec.wang/opencv-python/"  target="_blank">opencv-python中文教程 http://codec.wang/opencv-python/</a></p>-->
-<!--            <p><a href="https://github.com/ex2tron/OpenCV-Python-Tutorial"  target="_blank">opencv-python中文教程 github开源网址 https://github.com/ex2tron/OpenCV-Python-Tutorial</a></p>-->
-
-<!--        </div>-->
-<!--    </div>-->
 
 </div>
 
